intel/bench_214/extr_.linuxarchx86kernelcpuintel.c_intel_tlb_lookup_with_main/log.txt
bench_214/extr_.linuxarchx86kernelcpuintel.c_intel_tlb_lookup_with_main/extr_.linuxarchx86kernelcpuintel.c_intel_tlb_lookup_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.linuxarchx86kernelcpuintel.c_intel_tlb_lookup_with_main/extr_.linuxarchx86kernelcpuintel.c_intel_tlb_lookup_with_main.c:128:23: error: default initialization of an object of const type 'const unsigned char'
  const unsigned char desc;
                      ^
                           = '\0'
2 errors generated.
HLS FPGA Parse FAILED.
